            requiresAuth was false (during authenticated session)
14-02-06    SQL errors, if existent, correctly returned in articles
09-02-06    Fixed inability to change an article's category (Jayesh Sheth)
03-02-06    Checks for session timeout improved (Andrey Podshivalov)
31-01-06    Fixed error that occurs when empty array passed to implodeWithKeys()
            (sirphp)

IMPROVEMENTS
14-02-06    All action methods are now prefixed with '_cmd' to differentiate
            them from private methods
14-02-06    SGL_UrlParser_SefStrategy::resolveArrayElems renamed to
            SGL_Url::querystringArrayToHash, moved up inheritance hierarchy so it
            can be shared
14-02-06    Updated to latest jscalendar
13-02-06    Swedish translation updated (Peter Palotas)
13-02-06    Moved test.conf.ini to more secure location
09-02-06    Ban IP, Allow and Deny list can now be processed (Tomasz Osmialowski)
08-02-06    Blocks are now cacheable on an individual basis - schema change
            (Andrey Podshivalov)
08-02-06    Implemented a SGL::objectHasState() method to prevent inserting
            invalid objects.
08-02-06    Improved authorisation in SGL_Manager
07-02-06    Clarified distinction between authentication and authorisation
07-02-06    Removed 2 fatal errors for missing parent::Manager and unknown
            action, now you get an error page
07-02-06    Removed 2 non-essential process filters, SGL_Process_DetectDebug
            and SGL_Process_DetectBlackListing
07-02-06    Cleaned up URI parsing, toString() method moved from parsers to SGL_Url.
07-02-06    Error handling moved from filter chain up to Init tasks
06-02-06    Renamed all instances of IMessage to 'instant message'
06-02-06    Moved all install-related files to lib/SGL/Install
03-02-06    Html renderers moved to their own folder in lib/SGL
03-02-06    Url parsers moved to their own folder in lib/SGL
03-02-06    Messages can be passed type info (Andrey Podshivalov)